contendio de texto hecho por Emilse

--- a/multimedia.html
+++ b/multimedia.html
@@ -9,44 +9,45 @@
   </head>
   <body>
     <header>
+      <h1>"IROMAN"</h1>
       <nav>
         <ul>
-          <li>
-            <a href="/main">Pagina principal</a>
-            <a href="/form"
-              >Suscribite para recibir novedades de tu heroe favorito</a
-            >
-          </li>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="Multimedia.html">Multimedia</a></li>
+          <li><a href="Formulario.html">Formulario</a></li>
         </ul>
       </nav>
     </header>
     <main>
-      <h1>Contenido Multimedia de Iron Man</h1>
-
+      <h1>El Mundo Multimedia de IRON MAN</h1>
+      <hr />
       <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis
-        deleniti dolore exercitationem incidunt consequatur, quibusdam quo
-        inventore? Consequatur, accusamus itaque. Optio adipisci corporis
-        architecto dignissimos labore cumque reprehenderit autem tenetur.
+        <b
+          ><strong>El superhéroe más emblemático del universo Marvel</strong></b
+        >
       </p>
+      <p>Aquí tienes algunas cosas interesantes sobre él:</p>
 
       <section id="fotos">
-        <h2>Fotos de Iron Man salvando el dia</h2>
+        <h2>"Iron Man salvando el dia"</h2>
         <div class="container">
-          <img src="/assets/img/ironman-vs-hulk.jpg" alt="ironman-vs-hulk" />
+          <img src="./assets/img/ironman-vs-hulk.jpg" alt="ironman-vs-hulk" />
+          <hr />
           <img
-            src="/assets/img/desktop-wallpaper-1920x1080-iron-man-endgame-2020-laptop-full-backgrounds-and-iron-man-1920x1080.jpg"
+            src="./assets/img/desktop-wallpaper-1920x1080-iron-man-endgame-2020-laptop-full-backgrounds-and-iron-man-1920x1080.jpg"
             alt="ironman-vs-hulk"
           />
-          <img src="/assets/img/tony-stark.jpg" alt="ironman-vs-hulk" />
+          <hr />
+          <img src="./assets/img/tony-stark.jpg" alt="ironman-vs-hulk" />
+          <hr />
           <img
-            src="/assets/img/iron-man-last-scene.jpg"
+            src="./assets/img/iron-man-last-scene.jpg"
             alt="ironman-vs-hulk"
           />
         </div>
       </section>
       <section id="videos">
-        <h2>Videos exclusivos de Iron Man</h2>
+        <h2>VIDEOS EXCLUSIVOS DE IRON MAN</h2>
 
         <div class="container">
           <article>
@@ -81,35 +82,44 @@
           <h3>CGI del traje de Iron Man</h3>
           <video
             controls
-            src="/assets/video/Iron Man suit up Scene on Green Screen.mp4"
+            src="./assets/video/Iron Man suit up Scene on Green Screen.mp4"
           ></video>
         </article>
       </section>
       <section id="audios">
-        <h2>Canciones favoritas de Tony Stark</h2>
+        <h2>Canciones favoritas de <b>TONY STARK</b></h2>
         <article>
-          <h3>Black Sabbath - "Iron Man"</h3>
+          <h3>Black Sabbath - <b>"Iron Man"</b></h3>
           <p>
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolores
-            excepturi placeat, natus cupiditate quae aspernatur provident
-            repellat vel vero qui enim tempora nam nostrum sapiente magni
-            nesciunt, omnis impedit iusto?
+            Ha dejado una huella indeleble en la historia del rock. Desde su
+            lanzamiento en 1970, ha cautivado a generaciones con su riff de
+            guitarra pesado y su letra misteriosa. La canción narra la historia
+            de un hombre que viaja en el tiempo y ve el apocalipsis, pero al
+            regresar, se convierte en un ser de metal indestructible. Su sonido
+            oscuro y poderoso, combinado con la voz única de Ozzy Osbourne, lo
+            convierte en un himno para los amantes del rock y un símbolo del
+            legado de Black Sabbath en la música.
+            <b>"Iron Man"</b> sigue resonando con su energía única y su mensaje
+            atemporal sobre la alienación y el destino humano.
           </p>
           <audio
-            src="/assets/audio/Iron Man (2012 Remaster) (128).mp3"
+            src="./assets/audio/Iron Man (2012 Remaster) (128).mp3"
             controls
           ></audio>
         </article>
         <article>
-          <h3>AC/DC - "Back in Black"</h3>
+          <h3>AC/DC - <b>"Back in Black"</b></h3>
           <p>
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolores
-            excepturi placeat, natus cupiditate quae aspernatur provident
-            repellat vel vero qui enim tempora nam nostrum sapiente magni
-            nesciunt, omnis impedit iusto?
+            La canción <em>"Back in Black"</em> se destaca por su energía
+            implacable y su letra que habla sobre enfrentar desafíos y superar
+            obstáculos, lo que resuena con la narrativa de Tony Stark en las
+            películas de Marvel. Además, el título mismo,
+            <em>"Back in Black"</em> (De vuelta en negro), evoca la armadura
+            icónica de Iron Man, que en su mayoría es de color negro con
+            detalles en rojo y dorado.
           </p>
           <audio
-            src="/assets/audio/AC-DC - Back In Black(64).mp3"
+            src="./assets/audio/AC-DC - Back In Black(64).mp3"
             controls
           ></audio>
         </article>
@@ -118,8 +128,16 @@
     <aside></aside>
     <footer>
       <h2>
-        Seguinos en nuestras redes sociales para tener mas contenido de Iron Man
+        Te invitamos a seguirnos en nuestras redes sociales y seguir
+        descubriendo mas de <b>Iron Man</b>
       </h2>
+      <p>
+        ¡Descubre el fascinante mundo multimedia de Iron Man! 🚀🔥 Desde
+        <i>emocionantes</i> videos hasta las canciones que
+        <i>inspiraron al genio</i>, ¡sumérgete en la leyenda de Tony Stark! 💥
+        #IronMan #Marvel #Multimedia
+      </p>
+
       <ul>
         <li>
           <a href="https://www.instagram.com/">Instagram</a>
