seccion de principal hecha por Juan y Nazarena

--- a/multimedia.html
+++ b/multimedia.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="estilos.css" />
     <link rel="shortcut icon" href="icon.png" type="image/x-icon" />
     <title>Fotos, videos y mas</title>
   </head>
@@ -13,8 +13,8 @@
       <nav>
         <ul>
           <li><a href="index.html">Home</a></li>
-          <li><a href="Multimedia.html">Multimedia</a></li>
-          <li><a href="Formulario.html">Formulario</a></li>
+          <li><a href="multimedia.html">Multimedia</a></li>
+          <li><a href="formulario.html">Formulario</a></li>
         </ul>
       </nav>
     </header>
@@ -38,7 +38,7 @@
             alt="ironman-vs-hulk"
           />
           <hr />
-          <img src="./assets/img/tony-stark.jpg" alt="ironman-vs-hulk" />
+          <img src="./assets/img/tony-stark.jpg" alt="tony" />
           <hr />
           <img
             src="./assets/img/iron-man-last-scene.jpg"
