correccion de detalles

--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="./icon.png" type="image/x-icon">
-    <title>IRON MAN</title>
-
     <link rel="stylesheet" href="./estilos.css"/>
+    <title>IRON MAN</title>
 
 </head>
 <body>
@@ -32,12 +32,14 @@
         <img class="image2" src="./assets/img/img2.jpeg" alt="Iroman">
         <P>La historia de Iron Man comienza con Tony Stark, un genio multimillonario, que tras ser gravemente herido y secuestrado, utiliza su brillante mente para crear una armadura tecnológicamente avanzada que le permite convertirse en el invencible Iron Man. Desde entonces, Tony Stark ha luchado contra amenazas tanto terrenales como cósmicas, defendiendo al mundo con su ingenio, su coraje y su corazón de héroe.</P>
         <img class="image" src="./assets/img/img3.jpeg" alt="Iroman">
-        <p>DIO SU VIDA POR LA HUMANIDAD</p>
+        <p><b> SU VIDA POR LA HUMANIDAD</b></p>
 
 
     </article>
-    <table border="1">
-        <caption>Información sobre Iron Man</caption>
+    
+    <div class="container">
+        <table border="1">
+        <caption><b>Información sobre Iron Man</b></caption>
         <tr>
             <th>Nombre Real</th>
             <th>Primera Aparición</th>
@@ -48,8 +50,8 @@
             <td>Tales of Suspense #39 (marzo de 1963)</td>
             <td>Stan Lee, Larry Lieber, Don Heck, Jack Kirby</td>
         </tr>
-    </table>
-    
+        </table>
+    </div>
 
     <footer class="footer">
         <p>Derechos reservados &copy; 2024</p>
